Remove unused API method